syntax = "proto3";
package nanoflow;
option go_package = "rpc/messages";

service MessageService {
  rpc SubscribeToMessages(SubscriptionRequest)
      returns (stream SubscriptionStream);
  rpc AppendMessage(AppendRequest) returns (Empty);
}

message AppendRequest { bytes body = 1; }
message Empty {}
message SubscriptionRequest {}

message SubscriptionStream {
  string id = 1;
  int64 timestamp = 2;
  int64 offset = 3;
  bytes data = 4;
}